--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>My Portfolio Page666</title>
+  <title>My Portfolio Page</title>
 
 
     <link rel="shortcut icon" href="icons8-granate-ios-filled-16.png" type="image/x-icon" />
