--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
   <body>
     <header class="page-header">
       <!-- Add your logo here -->
-      <img src="eye.png" class="eye" alt"an empty space">
+      <img src="eye.png" class="eye" alt"eye">
       <nav class="main-navigation page-header__item">
         <ul role="menu-bar" class="navigation-list">
           <li role="presentation">
-            <h2><a href="index.html" class="page-header__item" class="navigation-list__item navigation-list__item--active">Home</a></h2>
+          <h2> <a href="index.html" class="page-header__item" class="navigation-list__item navigation-list__item--active">Home</a></h2>
           </li>
           <li role="presentation">
-          <h2><a href="about.html" class="page-header__item"  class="navigation-list__item">About</a></h2>
+            <h2><a href="about-me.html" class="page-header__item"  class="navigation-list__item">About</a></h2>
           </li>
           <li role="presentation">
-            <h2><a href="contact.html" class="page-header__item"  class="navigation-list__item">Contact</a></h2>
+            <h2><a href="contact-me.html" class="page-header__item"  class="navigation-list__item">Contact</a></h2>
           </li>
-        <li role="presentation">
-          <h2><a href="work.html" class="page-header__item"  class="navigation-list__item">Work</a><h2>
-        </li>
+          <li role="presentation">
+            <h2><a href="my-work.html" class="page-header__item"  class="navigation-list__item">Work</a><h2>
+          </li>
         </ul>
       </nav>
     </header>
